Overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 
 body{
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
 .down-arrow{
